# cli-server

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  .goreleaser.yml  Dockerfile  Dockerfile.agent  Dockerfile.cc-broker  Dockerfile.claudecode  Dockerfile.codex-app-gateway  Dockerfile.codex-exec-gateway  Dockerfile.executor-registry  Dockerfile.jupyter  Dockerfile.llmproxy  Dockerfile.nanoclaw  Dockerfile.notebook  Dockerfile.opencode  Dockerfile.sandboxproxy  LICENSE  Makefile  README.md  claudecode-entrypoint.sh  codex-pin.json  docker-compose.yml  go.mod  go.sum  main.go  nanoclaw-entrypoint.sh
agent-server/: package.json  pnpm-lock.yaml
cmd/: agent.go  root.go  serve.go
docs/: api-reference.md  audit-report-2026-03-13.md
nanoclaw-patches/: process-runner.ts
notebook/: README.md  docker-compose.smoke.yml  jupyter_server_config.py  stub_gateway_runner.py
notebook/agentserver_jupyter_ext/: identity_provider_test.py  kernel_provisioner_test.py  pyproject.toml
notebook/agentserver_jupyter_ext/src/agentserver_jupyter_ext/: __init__.py  identity_provider.py  kernel_provisioner.py
opencodeweb/: embed.go
scripts/: codex-pin-bump.sh
sdk/python/: README.md  pyproject.toml
sdk/python/src/agentserver_sdk/: __init__.py  _repr.py  client.py  ctx.py  env.py  errors.py  process.py  types.py
sdk/python/tests/: conftest.py  stub_gateway.py  stub_rest.py  test_client.py  test_ctx.py  test_env.py  test_process.py  test_repr.py  test_smoke.py  test_stub.py  test_types.py
sidecar/: Dockerfile  (+1 more)
sidecar-ts/: Dockerfile  package.json  pnpm-lock.yaml
(+648 files in other folders)
