[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agentserver-sdk"
version = "0.1.0"
description = "Async Python SDK for agentserver envs (env-mcp)"
requires-python = ">=3.12"
dependencies = [
    "websockets~=14.0",
]

[project.optional-dependencies]
dev = [
    "pytest~=8.0",
    "pytest-asyncio~=0.24",
    "ruff~=0.6",
]

[tool.hatch.build.targets.wheel]
packages = ["src/agentserver_sdk"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]  # let the formatter handle long lines
